# Proiect-Ros2-si-Gazebo

./: package.xml  setup.cfg  setup.py
launch/: penalty_launch.py  penalty_world.launch.py
models/ball/: model.config  model.sdf
models/goal/: model.config  model.sdf
models/obstacle/: model.config  model.sdf
resource/: run_penalty.sh  run_sim.sh
turtlebot_penalty/: penalty_shooter.py
worlds/: penalty_field.world
